@@ -2,6 +2,7 @@ v1.15 XW 01-08-2019
 removed: sub dirs from meta file
 improved: code
 removed: some verbose
+added: description on object clone
 
 v1.14 XW 31-07-2019
 fixed: filesystem
